# gm_attractor

./: .gitignore  CMakeLists.txt
include/: attractorglapp.hpp  attractormodel.hpp  camera.hpp  fpsmanager.hpp  glmodel.hpp  iglapp.hpp  shader.hpp  utils.hpp  vec3.hpp
include/glad/: glad.h
res/: x.txt  y.txt
res/attractors_data/section_shapes/circle/: x.txt  y.txt
res/attractors_data/section_shapes/heart/: x.txt  y.txt
res/attractors_data/section_shapes/square/: x.txt  y.txt
res/attractors_data/trajectories/coullet_1/: x.txt  y.txt  z.txt
res/attractors_data/trajectories/coullet_2/: x.txt  y.txt  z.txt
res/second/: x.txt
shaders/: background.fs  background.vs  main.vs
shaders/attractor/: frag.glsl  vert.glsl
shaders/background/: vert.glsl
src/: attractorglapp.cpp  attractormodel.cpp  camera.cpp  fpsmanager.cpp  glad.c  glmodel.cpp  iglapp.cpp  main.cpp  shader.cpp  utils.cpp
